# real-estate-monitor

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  HANDOFF.md  README.md  config.yaml  fly.toml  pyproject.toml  render.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx  naver-maps.d.ts
scripts/: install_launchd.sh  probe_complex_meta.py  uninstall_launchd.sh
scripts/launchd/: com.myhouse.auctions.plist  com.myhouse.bot.plist  com.myhouse.collector.plist  com.myhouse.dashboard.plist  com.myhouse.deals.plist  com.myhouse.discover.plist  com.myhouse.permits.plist
src/myhouse/: __init__.py  cli.py  constants.py  logging_conf.py  settings.py  util.py
src/myhouse/cloud/: s3.py  (+2 more)
tests/: conftest.py  test_api.py  test_auction_collector.py  test_auction_detail.py  test_auction_diff.py  test_auction_digest.py  test_auction_parser.py  test_auction_resolver.py  test_auction_retention.py  test_bands.py  test_bot_commands.py  test_case_dxdy_parser.py  test_cloud_sync.py  test_collector.py  test_complex_parser.py  test_deal_diff.py  test_deal_digest.py  test_deal_parser.py  test_dedup.py  test_diff.py  test_digest.py  test_discover.py  test_flash.py  test_on_demand.py  test_orphan_runs.py  test_parser.py  test_permit_diff.py  test_permit_gc_parser.py  test_permit_parser.py  test_regions.py  test_reply.py  test_s3_sigv4.py  test_search.py  test_telegram_send.py  test_untracked_hidden.py  test_util.py  test_web.py  test_web_complexes.py  test_web_deals.py  test_web_flash.py  (+2 more)
(+135 files in other folders)
