[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myhouse"
version = "0.1.0"
description = "네이버부동산 매물 모니터링 — 관심 단지의 신규/가격변동/거래완료를 하루 2회 추적해 텔레그램 알림 + 로컬 대시보드로 후보를 추린다."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.40",
    "sqlmodel>=0.0.22",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "respx>=0.21", "ruff>=0.6"]

[project.scripts]
myhouse = "myhouse.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/myhouse"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: (str, Enum) 은 SQLModel 과 잘 동작하는 검증된 패턴 / UP047: PEP695 제네릭 강제는 취향
ignore = ["E501", "UP042", "UP047"]

[tool.ruff.lint.per-file-ignores]
# FastAPI 는 Depends()/Form() 을 인자 기본값으로 쓰는 게 표준 패턴 (B008 오탐)
"src/myhouse/web/routes.py" = ["B008"]
